// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`frames 105×50 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 MODELS · by cost                         ◀ a  today   this week   this month  [all]  1h   5h   24h  d ▶ 
 model                 provider  input    $/M  output    $/M   cache   $/M       cost  share             
 gpt-5.5               codex      2.5M   5.00    1.6M  30.00   63.9M  0.50    $117.25  ━━━━━━━━━━  33.6% 
 gpt-5.6-sol           codex      2.8M   4.00    1.8M  20.00   72.0M  0.40    $108.18  ━━━━━━━━━━  31.0% 
 Sonnet 4.6            claude     1.7M   3.00    1.0M  15.00   40.7M  0.30     $42.76  ━━━━━━━━━━  12.2% 
 Opus 4.8              claude     993K   5.00    579K  25.00   25.4M  0.50     $42.02  ━━━━━━━━━━  12.0% 
 Haiku 4.5             claude     1.9M   1.00    1.2M   5.00   47.6M  0.10     $16.53  ━━━━━━━━━━   4.7% 
 Opus 4.8 (fast)       claude     110K  10.00     70K  50.00    2.7M  1.00      $9.47  ━━━━━━━━━━   2.7% 
 Opus 5.5              claude     221K   4.00    149K  20.00    5.4M  0.20      $6.70  ━━━━━━━━━━   1.9% 
 Opus 5.5 (fast)       claude     102K   8.00     68K  40.00    2.7M  0.40      $6.26  ━━━━━━━━━━   1.8% 
 codex-auto-review     codex      157K   0.20    109K   1.20    4.2M  0.02     ≈$0.31  ━━━━━━━━━━   0.1% 
 Mystery 9 *           claude     1.6M      —    997K      —   39.6M     —   unpriced  ━━━━━━━━━━   0.0% 
 ─────────────────────────────────────────────────────────────────────────────────────────────────────── 
 Total                           12.1M           7.5M         304.1M        ≈$349.47*                    
                                                                                                         
 $/M = base rate · cache = read rate; writes and long-context requests cost more                         
 * no published rate: tokens counted, cost excluded · 87.0% of tokens priced                             
 ≈ estimated: codex-auto-review priced as gpt-5.6-luna; its provider doesn't say which model serves it   
                                                                                                         
 ╭─ gpt-5.5 · rates ─────────────────────────────────────╮  ╭─ gpt-5.5 · who used it ──────────────────╮ 
 │ input    $5.00 · output $30.00                        │  │ codex-win ━━━━━━━━━━━━━━━━━━  54% $62.87 │ 
 │ cache    read $0.50 (0.1× input)                      │  │ codex     ━━━━━━━━━━━━━━━━━━  46% $54.38 │ 
 │ write    5m $6.25 · 1h $10.00                         │  │ first seen Aug 2 · 1,483 requests        │ 
 │ fast     $12.50 · $75.00 · read $1.25                 │  │                                          │ 
 │ long     >272K: input 2×, output 1.5×                 │  │                                          │ 
 │ source   developers.openai.com · checked 2026-10-01   │  │                                          │ 
 │                                                       │  │                                          │ 
 ╰───────────────────────────────────────────────────────╯  ╰──────────────────────────────────────────╯ 
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d window   w/s model   enter rates   r sort                                                           
 1-4/tab views   c account   x settings   ? help   q quit                                  MCP ● 1 agent 
"
`;

exports[`frames 120×45 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 MODELS · by cost                                        ◀ a  today   this week   this month  [all]  1h   5h   24h  d ▶ 
 model                     provider   input     $/M   output     $/M    cache    $/M        cost   share                
 gpt-5.5                   codex       2.5M    5.00     1.6M   30.00    63.9M   0.50     $117.25   ━━━━━━━━━━   33.6%   
 gpt-5.6-sol               codex       2.8M    4.00     1.8M   20.00    72.0M   0.40     $108.18   ━━━━━━━━━━   31.0%   
 Sonnet 4.6                claude      1.7M    3.00     1.0M   15.00    40.7M   0.30      $42.76   ━━━━━━━━━━   12.2%   
 Opus 4.8                  claude      993K    5.00     579K   25.00    25.4M   0.50      $42.02   ━━━━━━━━━━   12.0%   
 Haiku 4.5                 claude      1.9M    1.00     1.2M    5.00    47.6M   0.10      $16.53   ━━━━━━━━━━    4.7%   
 Opus 4.8 (fast)           claude      110K   10.00      70K   50.00     2.7M   1.00       $9.47   ━━━━━━━━━━    2.7%   
 Opus 5.5                  claude      221K    4.00     149K   20.00     5.4M   0.20       $6.70   ━━━━━━━━━━    1.9%   
 Opus 5.5 (fast)           claude      102K    8.00      68K   40.00     2.7M   0.40       $6.26   ━━━━━━━━━━    1.8%   
 codex-auto-review         codex       157K    0.20     109K    1.20     4.2M   0.02      ≈$0.31   ━━━━━━━━━━    0.1%   
 Mystery 9 *               claude      1.6M       —     997K       —    39.6M      —    unpriced   ━━━━━━━━━━    0.0%   
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────   
 Total                                12.1M             7.5M           304.1M          ≈$349.47*                        
                                                                                                                        
 $/M = base rate · cache = read rate; writes and long-context requests cost more                                        
 * no published rate: tokens counted, cost excluded · 87.0% of tokens priced                                            
 ≈ estimated: codex-auto-review priced as gpt-5.6-luna; its provider doesn't say which model serves it                  
                                                                                                                        
 ╭─ gpt-5.6-sol · rates ──────────────────────────────────────╮  ╭─ gpt-5.6-sol · who used it ────────────────────────╮ 
 │ input    $4.00 · output $20.00                             │  │ codex     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━  51% $55.45 │ 
 │ cache    read $0.40 (0.1× input)                           │  │ codex-win ━━━━━━━━━━━━━━━━━━━━━━━━━━━━  49% $52.73 │ 
 │ write    $5.00                                             │  │ first seen Aug 2 · 1,678 requests                  │ 
 │ fast     $8.00 · $40.00 · read $0.80                       │  │                                                    │ 
 │ long     >272K: input 2×, output 1.5×                      │  │                                                    │ 
 │ source   developers.openai.com · checked 2026-10-01        │  │                                                    │ 
 │ changed  Aug 21: $5/$30 → $4/$20                           │  │                                                    │ 
 ╰────────────────────────────────────────────────────────────╯  ╰────────────────────────────────────────────────────╯ 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d window   w/s model   enter rates   r sort                                                                          
 1-4/tab views   c account   x settings   ? help   q quit                                                 MCP ● 1 agent 
"
`;

exports[`frames 80×24 1`] = `
" tokenhud   1   2   3 Models   4                   all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 MODELS · by cost          ◀ a  today   week   month  [all]  1h   5h   24h  d ▶ 
 model                  provider input output  cache      cost share            
 gpt-5.5                codex     2.5M   1.6M  63.9M   $117.25 ━━━━━━━━━━ 33.6% 
 gpt-5.6-sol            codex     2.8M   1.8M  72.0M   $108.18 ━━━━━━━━━━ 31.0% 
 Sonnet 4.6             claude    1.7M   1.0M  40.7M    $42.76 ━━━━━━━━━━ 12.2% 
 Opus 4.8               claude    993K   579K  25.4M    $42.02 ━━━━━━━━━━ 12.0% 
 Haiku 4.5              claude    1.9M   1.2M  47.6M    $16.53 ━━━━━━━━━━  4.7% 
 Opus 4.8 (fast)        claude    110K    70K   2.7M     $9.47 ━━━━━━━━━━  2.7% 
 Opus 5.5               claude    221K   149K   5.4M     $6.70 ━━━━━━━━━━  1.9% 
 Opus 5.5 (fast)        claude    102K    68K   2.7M     $6.26 ━━━━━━━━━━  1.8% 
 codex-auto-review      codex     157K   109K   4.2M    ≈$0.31 ━━━━━━━━━━  0.1% 
 Mystery 9 *            claude    1.6M   997K  39.6M  unpriced ━━━━━━━━━━  0.0% 
 ────────────────────────────────────────────────────────────────────────────── 
 Total                           12.1M   7.5M 304.1M ≈$349.47*                  
                                                                                
 * no published rate: tokens counted, cost excluded · 87.0% of tokens priced    
 ≈ estimated: codex-auto-review priced as gpt-5.6-luna                          
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
 a/d window   w/s model   enter rates   r sort   ? help           MCP ● 1 agent 
"
`;

exports[`frames 160×50 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                                                                   scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                
 MODELS · by cost                                                                                ◀ a  today   this week   this month  [all]  1h   5h   24h  d ▶ 
 model                     provider   input     $/M   output     $/M    cache    $/M        cost   share                                                        
 gpt-5.5                   codex       2.5M    5.00     1.6M   30.00    63.9M   0.50     $117.25   ━━━━━━━━━━   33.6%                                           
 gpt-5.6-sol               codex       2.8M    4.00     1.8M   20.00    72.0M   0.40     $108.18   ━━━━━━━━━━   31.0%                                           
 Sonnet 4.6                claude      1.7M    3.00     1.0M   15.00    40.7M   0.30      $42.76   ━━━━━━━━━━   12.2%                                           
 Opus 4.8                  claude      993K    5.00     579K   25.00    25.4M   0.50      $42.02   ━━━━━━━━━━   12.0%                                           
 Haiku 4.5                 claude      1.9M    1.00     1.2M    5.00    47.6M   0.10      $16.53   ━━━━━━━━━━    4.7%                                           
 Opus 4.8 (fast)           claude      110K   10.00      70K   50.00     2.7M   1.00       $9.47   ━━━━━━━━━━    2.7%                                           
 Opus 5.5                  claude      221K    4.00     149K   20.00     5.4M   0.20       $6.70   ━━━━━━━━━━    1.9%                                           
 Opus 5.5 (fast)           claude      102K    8.00      68K   40.00     2.7M   0.40       $6.26   ━━━━━━━━━━    1.8%                                           
 codex-auto-review         codex       157K    0.20     109K    1.20     4.2M   0.02      ≈$0.31   ━━━━━━━━━━    0.1%                                           
 Mystery 9 *               claude      1.6M       —     997K       —    39.6M      —    unpriced   ━━━━━━━━━━    0.0%                                           
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────                                           
 Total                                12.1M             7.5M           304.1M          ≈$349.47*                                                                
                                                                                                                                                                
 $/M = base rate · cache = read rate; writes and long-context requests cost more                                                                                
 * no published rate: tokens counted, cost excluded · 87.0% of tokens priced                                                                                    
 ≈ estimated: codex-auto-review priced as gpt-5.6-luna; its provider doesn't say which model serves it                                                          
                                                                                                                                                                
 ╭─ gpt-5.5 · rates ──────────────────────────────────────────╮  ╭─ gpt-5.5 · who used it ────────────────────────────────────╮                                 
 │ input    $5.00 · output $30.00                             │  │ codex-win ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  54% $62.87 │                                 
 │ cache    read $0.50 (0.1× input)                           │  │ codex     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  46% $54.38 │                                 
 │ write    5m $6.25 · 1h $10.00                              │  │ first seen Aug 2 · 1,483 requests                          │                                 
 │ fast     $12.50 · $75.00 · read $1.25                      │  │                                                            │                                 
 │ long     >272K: input 2×, output 1.5×                      │  │                                                            │                                 
 │ source   developers.openai.com · checked 2026-10-01        │  │                                                            │                                 
 │                                                            │  │                                                            │                                 
 ╰────────────────────────────────────────────────────────────╯  ╰────────────────────────────────────────────────────────────╯                                 
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d window   w/s model   enter rates   r sort                                                                                                                  
 1-4/tab views   c account   x settings   ? help   q quit                                                                                         MCP ● 1 agent 
"
`;

exports[`frames 80×24 with Enter: the selected model's cards, the table down to its row 1`] = `
" tokenhud   1   2   3 Models   4                   all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 MODELS · by cost          ◀ a  today   week   month  [all]  1h   5h   24h  d ▶ 
 model                  provider input output  cache      cost share            
 gpt-5.5                codex     2.5M   1.6M  63.9M   $117.25 ━━━━━━━━━━ 33.6% 
 gpt-5.6-sol            codex     2.8M   1.8M  72.0M   $108.18 ━━━━━━━━━━ 31.0% 
 ─────────────────────────────────────────────────────────────────── 8 more ↓ ─ 
 Total                           12.1M   7.5M 304.1M ≈$349.47*                  
                                                                                
 ╭─ gpt-5.6-sol · rates and use ──────────────────────────────────────────────╮ 
 │ input    $4.00 · output $20.00                                             │ 
 │ cache    read $0.40 (0.1× input)                                           │ 
 │ write    $5.00                                                             │ 
 │ fast     $8.00 · $40.00 · read $0.80                                       │ 
 │ long     >272K: input 2×, output 1.5×                                      │ 
 │ source   developers.openai.com · checked 2026-10-01                        │ 
 │ changed  Aug 21: $5/$30 → $4/$20                                           │ 
 │ codex     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  51% $55.45 │ 
 │ codex-win ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━  49% $52.73 │ 
 │ first seen Aug 2 · 1,678 requests                                          │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
────────────────────────────────────────────────────────────────────────────────
 a/d window   w/s model   enter rates   r sort   ? help           MCP ● 1 agent 
"
`;
